objects/Account_Contract_Junction_Object__c.object
<CustomObject>
    <label>Account to Contract Relationship</label>
    <nameField>
        <displayFormat>{0}</displayFormat>
        <label>Account/Contract Junction Object Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Account to Contract Relationships</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <fields>
        <fullName>Scope__c</fullName>
        <description>To display data from the contract scope field here in the cross function object realted list</description>
        <formula>IF(includes( Contract_Relationship_1__r.Scope__c ,&quot;ASLS_Reagents&quot;),&quot;ASLS_Reagents: &quot;,&quot;&quot;)&amp;
IF(includes( Contract_Relationship_1__r.Scope__c ,&quot;ASLS_Instruments&quot;),&quot;ASLS_Instruments: &quot;,&quot;&quot;)&amp;
IF(includes( Contract_Relationship_1__r.Scope__c ,&quot;ASLS_Consumables&quot;),&quot;ASLS_Consumables: &quot;,&quot;&quot;)&amp;
IF(includes( Contract_Relationship_1__r.Scope__c ,&quot;LST_Reagents&quot;),&quot;LST_Reagents: &quot;,&quot;&quot;)&amp;
IF(includes( Contract_Relationship_1__r.Scope__c ,&quot;LST_Instruments&quot;),&quot;LST_Instruments: &quot;,&quot;&quot;)&amp;
IF(includes( Contract_Relationship_1__r.Scope__c ,&quot;LST_Consumables&quot;),&quot;LST_Consumables: &quot;,&quot;&quot;)&amp;
IF(includes( Contract_Relationship_1__r.Scope__c ,&quot;GS_Reagents&quot;),&quot;GS_Reagents: &quot;,&quot;&quot;)&amp;
IF(includes( Contract_Relationship_1__r.Scope__c ,&quot;GS_Instruments&quot;),&quot;GS_Instruments: &quot;,&quot;&quot;)&amp;
IF(includes( Contract_Relationship_1__r.Scope__c ,&quot;GS_Consumables&quot;),&quot;GS_Consumables: &quot;,&quot;&quot;)&amp;
IF(includes( Contract_Relationship_1__r.Scope__c ,&quot;SDx_Reagents&quot;),&quot;SDx_Reagents: &quot;,&quot;&quot;)&amp;
IF(includes( Contract_Relationship_1__r.Scope__c ,&quot;SDx_Instruments&quot;),&quot;SDx_Instruments: &quot;,&quot;&quot;)&amp;
IF(includes( Contract_Relationship_1__r.Scope__c ,&quot;SDx_Consumables&quot;),&quot;SDx_Consumables: &quot;,&quot;&quot;)</formula>
        <label>Scope</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>End_Date__c</fullName>
        <formula>Contract_Relationship_1__r.End_Date__c</formula>
        <label>End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Start_Date__c</fullName>
        <formula>Contract_Relationship_1__r.Start_Date__c</formula>
        <label>Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Special_Terms__c</fullName>
        <formula>Contract_Relationship_1__r.SpecialTerms</formula>
        <label>Special Terms</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SAP_Deal_Status__c</fullName>
        <formula>TEXT(Contract_Relationship_1__r.SAP_Deal_Status__c)</formula>
        <label>SAP Deal Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_Formula_Test__c</fullName>
        <formula>CASE( Account_Relationship__r.RecordTypeId ,
&apos;01230000000cPp0&apos;, &apos;PKI-Master&apos;,
&apos;012300000000YlK&apos;, &apos;Prospect Account&apos;,
&apos;SAP Account&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account Record Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_Relationship__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Associated Account</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Account.RecordTypeId</field>
                <operation>equals</operation>
                <value>Customer</value>
            </filterItems>
            <isOptional>true</isOptional>
        </lookupFilter>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Account to Contract Relationships</relationshipLabel>
        <relationshipName>Account_Contract_Junction_Objects</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Contract_Relationship_1__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contract Number</label>
        <referenceTo>Contract</referenceTo>
        <relationshipLabel>Account to Contract Relationships</relationshipLabel>
        <relationshipName>Account_Contract_Junction_Objects</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Accountwide_Contract_Status__c</fullName>
        <formula>TEXT(Contract_Relationship_1__r.Accountwide_Contract_Status__c )</formula>
        <label>Accountwide Contract Status</label>
        <type>Text</type>
    </fields>
</CustomObject>